# Uni-Notes-Second-Year

./: LaTeX template.tex
Tri 1/ECEN 202/: Assignment 2 figures.docx  Lab 2 Post lab.docx  Lab 2 report.docx  untitled.sch
Tri 1/ECEN 202/Lab 3/: ECEN 202 Lab 3.aux  ECEN 202 Lab 3.tex.bak  Lab 3.s##  Lab 3.s#1  Lab 3.s#2  Lab 3.s#3  Lab 3.s#4  Lab 3.s#5  Lab 3.s#6  Lab 3.s#7  Lab 3.s#8  Lab 3.s#9  Lab 3.sch
Tri 1/ECEN 202/Lab 4/: Lab 3.aux  Lab 3.tex.bak  untitled.sch
Tri 1/ECEN 203/Lab 2/: Lab 3 handin.docx  Lab_2_MATlab.m
Tri 1/ECEN 203/Lab 3/: Lab report 3.aux  Lab report 3.tex
Tri 1/ECEN 203/Lab 4/: Lab_4.aux  Lab_4.tex
Tri 1/ECEN 203/Lab 5/: Lab_5.m
Tri 1/NWEN 241/NWEN Assignment 2/: part1.txt
Tri 1/NWEN 241/NWEN Assignment 3/: CMakeLists.txt  dbms.cc  dbms.hh  t34test.cc  t5test.cc  t6test.cc  t7test.cc
Tri 1/NWEN 241/NWEN Assignment 4/: CMakeLists.txt  dbcmd.cpp  dbms2.cc  dbms2.hh  lldb.cc  lldb.hh  t4test.cc  t7test.cc  vdb.cc  vdb.hh
Tri 1/NWEN 241/NWEN Assignment 5/: CMakeLists.txt  makefile  run_server.cc  server.cc  server.hh  vdb.cc  vdb.hh
Tri 2/ECEN 204/: Lab 2 Report.docx  lab 1 report.docx  lab2.xlsx  ~$b 2 Report.docx
Tri 2/ECEN 204/Lab 1/: lab2.xlsx
Tri 2/ECEN 204/Lab 4/: Lab 4.aux  Lab 4.tex
Tri 2/ECEN 204/Lab 5/: Lab 5.aux  Lab 5.tex
Tri 2/ECEN 204/Project 1/: Lab 2.aux  Lab 2.tex  circuit.s##  (+4 more)
Tri 2/ECEN 220/: Assignment_5.m
Tri 2/ENGR 201/: A review of Surface power systems for Martian colonisation.docx  Litrature Review.tex  Text File  Workshop 2 Homework.aux  Workshop 2 Homework.tex
Tri 2/MATH 245/: Template.ipynb
(+85 files in other folders)
